# kiutils-rs

./: .gitignore  404.html  Cargo.toml  IMPLEMENTATION_PLAN.md  README.md  api-reference.html  examples.html  formats.html  index.html  intro.html  print.html  quickstart.html  searcher-c2a407aa.js  searchindex-1151ce51.js  searchindex-49b1926d.js  searchindex-75db0482.js  searchindex-95ab3efb.js  toc-2189e685.js  toc.html  usage-patterns.html  verification.html
.github/workflows/: release-plz.yml
crates/kiutils/: CHANGELOG.md  Cargo.toml
crates/kiutils/src/: lib.rs
crates/kiutils/tests/: public_api.rs
crates/kiutils_kicad/: CHANGELOG.md  Cargo.toml
crates/kiutils_kicad/examples/: pcb_roundtrip.rs  read_all.rs  schematic_corpus_roundtrip.rs  schematic_roundtrip.rs  symbol_corpus_roundtrip.rs  symbol_roundtrip.rs
crates/kiutils_kicad/examples/data/: sample.kicad_sch
crates/kiutils_kicad/src/: batch.rs  diagnostic.rs  dru.rs  error.rs  footprint.rs  lib.rs  lib_table.rs  pcb.rs  project.rs  schematic.rs  sections.rs  sexpr_edit.rs  sexpr_utils.rs  symbol.rs  unknown.rs  version.rs  version_diag.rs  worksheet.rs  write_mode.rs
crates/kiutils_kicad/tests/: inspect_cli.rs  integration.rs  schematic_symbol_full_api.rs
crates/kiutils_kicad/tests/fixtures/: sample.kicad_sch  sample.kicad_sym
crates/kiutils_sexpr/: CHANGELOG.md  Cargo.toml
crates/kiutils_sexpr/src/: parser.rs
docs/src/: api-reference.md  examples.md  formats.md  quickstart.md  usage-patterns.md
