[workspace]
members = [
  "crates/kiutils_sexpr",
  "crates/kiutils_kicad",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/Milind220/kiutils-rs"

[workspace.dependencies]
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
